--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .weatherapp {
   width: 320px;
-  height: 550px;
+  height: 570px;
   background-color: white;
   border-radius: 20px;
 
@@ -94,4 +94,8 @@
   position: relative;
   bottom: 5px;
   color: rgb(147, 146, 142);
+}
+
+.developer {
+  color: rgb(86, 86, 86);
 }
