Checking the responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
 .wholeapp {
-  /* position: absolute;
-  top: 50px;
-  left: 535px; */
+  margin-top: 15%;
   border-radius: 20px;
   box-shadow: 0px 0px 3px 1px rgb(114, 183, 223);
 
